@@ -1,3 +1,7 @@
+2017-02-06  Carl Love  <cel@us.ibm.com>
+	* gcc.target/powerpc/builtins-3-p8.c:  Add new testfile for missing
+	vec_packs built-in tests.
+
 2017-02-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	Backport from mainline
